@@ -2,6 +2,9 @@
 
 Changes with Apache 2.3.10
 
+  *) mod_userdir: Add merging of enable, disable, and filename arguments 
+     to UserDir directive, leave userlists unmerged. PR 44076 [Eric Covener]
+
   *) httpd: When no -k option is provided on the httpd command line, the server
      was starting without checking for an existing pidfile.  PR 50350 
      [Eric Covener] 
